--- a/starboard/android/apk/app/build.gradle
+++ b/starboard/android/apk/app/build.gradle
@@ -76,14 +76,14 @@ android {
         }
     }
     defaultConfig {
-        applicationId "com.cobalt.youtube.tv"
+        applicationId "com.google.android.youtube.tv"
         minSdkVersion MIN_SUPPORTED_SDK_VERSION
         targetSdkVersion LATEST_SUPPORTED_SDK_VERSION
         compileSdkVersion LATEST_SUPPORTED_SDK_VERSION
         versionCode 103
         versionName "${buildId}"
         manifestPlaceholders = [
-            applicationName: "Youtube TV",
+            applicationName: "YouTube",
             evergreenCompatible: "${evergreenCompatible}"
         ]
         externalNativeBuild {
